--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="github.com/OZZY1231/"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="OZZY1231.html"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
