--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </section>
             <hr class="m-0" />
             <!-- CV-->
-            <section class="resume-section" id="CV">
+            <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-7">CV</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-7">
