--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Intressen</h2>
                     <p>På fritiden gillar jag att vara med hundar och vara ute mycket.</p>
-                    <p class="mb-0">Men när jag är inne så kan du oftast hitta mig framför en dator där jag antingen spelar eller programmerar eller kanske båda.</p>
+                    <p class="mb-0">Men när jag är inne så kan du oftast hitta mig framför en dator där jag antingen spelar eller programmerar eller kanske både och.</p>
+                    <p>Jag älskar också att hålla på med elektronik, jag bygger datorer åt andra gratis för att jag tycker om att bygga datorer och att hjälpa andra.</p>
                 </div>
             </section>
             <hr class="m-0" />
