--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-7">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Arbetare</h3>
+                            <div class="subheading mb-3">Deltids jobb Coop Arena</div>
+                            <p>Jag fick grilla flera hundra hamburgare och städa köket efteråt.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2023 - Januari 2024</span></div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-7">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Arbetare</h3>
                             <div class="subheading mb-3">Prao Luleå hundcenter</div>
                             <p>Jag fick gå på tiotals långa promenader med hundar av olika storlekar och styrkor. Jag fick också mata hundar och träna upp dem yngre hundarna.</p>
                         </div>
