--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <p class="lead mb-5">Jag är en passionerad djurvän och engagerad i att hjälpa andra. Med en naturlig förmåga att följa instruktioner och ett proaktivt förhållningssätt hittar jag alltid sätt att bidra positivt till samhället oavsett situation. Min kärlek till djur och mitt driv att stödja människor driver mig att göra en verklig skillnad i världen. På fritiden så kan du ofta hitta mig i sällskap med mina fyrbenta vänner, spela spel eller programmera för skojs skull.
                     </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="OZZY1231.html"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://ozzy1231.github.io/"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
